* Fixed incorrect image size with latest cameras added to LibRaw, Siril now uses 202502 snapshot (#1565)
* Fixed metadata filling problem in PixelMath using $T (#1605)
* Fixed crash in Image Plate Solver (#1609)
* Fixed python API SirilInterface::set_seq_frame_incl (#1617)
* Fixed FWHM units when printing alignement results (#1616)

**Improvements:**
* Scripts can be opened in the editor directly from the Script Preferences treeview (#1556, !860)
* Added a fork of tkfilebrowser to support improved script UI file selection on Linux (!864)
* Implemented a better linear regression algorithm for SPCC (!853)
* Python scripts are now sorted alphabetically (#1559)
* Made crop and ROI selection CFA-aware (#1579)
* Added an optional rate limit for smooth scroll zoom speed (#1576)
* Added SirilInterface.create_new_seq() and SirilInterface.is_cli() in sirilpy (!867)
* GraXpert "Use GPU" now defaults to False but is persistent (saved in config)
* Added utility.ONNXHelper class in python module to make it easier to ensure the correct onnxruntime module is installed. (!874)
* Added ability to calibrate images for debayering only, without Dark, Flat, or Bias files (#1619)
* Simplified the scripts and SPCC repository checking and made it more robust and thread-safe (!872)

siril 1.4.0-beta1
04/26/25

**New features:**
* Added support for unknown keywords with path parsing (#1333)
* Added support for JPEG XL image format
* Added comparison star list creation from Siril (!381)
* Added intensity profiling function (#5)
* Added internal plotting tool (siril_plot) to be used with profiling and light_curves (removed usage of GNUplot) (!543 !545)
* Added git script repository integration (!560)
* Added ROI processing for certain functions (!571, fixes #1098 and #1188)
* Added fully color managed workflow using ICC profiles (!542, fixes #1010, #1207)
* Added command conesearch (replaces nomad and solsys), including support for new catalogues (vsx, gcvs, exo, aavso_chart) (!579, #1171)