@@ -339,8 +339,17 @@ void color_map_activate(GSimpleAction *action, GVariant *parameter, gpointer use
 }
 
 void chain_channels_state_change(GSimpleAction *action, GVariant *state, gpointer user_data) {
+	gboolean linked = g_variant_get_boolean(state);
 	g_simple_action_set_state(action, state);
-	set_unlink_channels(!g_variant_get_boolean(state));
+	set_unlink_channels(!linked);
+	gchar *name = g_build_filename("/org/siril/ui/", "pixmaps", linked ? "chain-linked.svg" : "chain.svg", NULL);
+	GtkWidget *image = lookup_widget("autostretch_linked_icon");
+	gtk_image_set_from_resource((GtkImage*) image, name);
+	GtkWidget *button = lookup_widget("linked_autostretch_button");
+	gchar *tooltip_text = g_strdup_printf(_("Link/unlink channels in autostretch viewer mode.\nCurrent state: %s."), linked ? _("linked") : _("unlinked"));
+	gtk_widget_set_tooltip_text(button, tooltip_text);
+	g_free(name);
+	g_free(tooltip_text);
 }
 
 void chain_channels_activate(GSimpleAction *action, GVariant *parameter, gpointer user_data) {
