@@ -269,6 +269,11 @@ along with Siril.  If not, see <http://www.gnu.org/licenses/>.
     <property name="can-focus">False</property>
     <property name="resource">/org/siril/ui/pixmaps/astrometry_dark.svg</property>
   </object>
+  <object class="GtkImage" id="autostretch_linked_icon">
+    <property name="visible">True</property>
+    <property name="can-focus">False</property>
+    <property name="resource">/org/siril/ui/pixmaps/chain-linked.svg</property>
+  </object>
   <object class="GtkAdjustment" id="clamp_adjustment">
     <property name="upper">1</property>
     <property name="value">0.5</property>
@@ -380,11 +385,6 @@ along with Siril.  If not, see <http://www.gnu.org/licenses/>.
     <property name="visible">True</property>
     <property name="can-focus">False</property>
     <property name="resource">/org/siril/ui/pixmaps/wcs-grid_dark.svg</property>
-  </object>
-  <object class="GtkImage" id="image4">
-    <property name="visible">True</property>
-    <property name="can-focus">False</property>
-    <property name="resource">/org/siril/ui/pixmaps/chain.svg</property>
   </object>
   <object class="GtkImage" id="imageHelp">
     <property name="visible">True</property>
@@ -10060,14 +10060,14 @@ WARNING: This option should not be checked for master stacking.</property>
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkToggleButton">
+                          <object class="GtkToggleButton" id="linked_autostretch_button">
                             <property name="visible">True</property>
                             <property name="can-focus">True</property>
                             <property name="receives-default">True</property>
-                            <property name="tooltip-text" translatable="yes">Chain/unchain channels in autostretch viewer mode.
-</property>
+                            <property name="tooltip-text" translatable="yes">Link/unlink channels in autostretch viewer mode.
+Current state: linked.</property>
                             <property name="action-name">win.chain-chan</property>
-                            <property name="image">image4</property>
+                            <property name="image">autostretch_linked_icon</property>
                             <property name="relief">none</property>
                             <property name="active">True</property>
                           </object>
