@@ -24,6 +24,7 @@ siril 1.4.0-beta2
 * Fixed crash in Image Plate Solver (#1609)
 * Fixed python API SirilInterface::set_seq_frame_incl (#1617)
 * Fixed FWHM units when printing alignement results (#1616)
+* Fixed incorrect behaviour when opening the git repositories if a git lock file was in place
 
 **Improvements:**
 * Scripts can be opened in the editor directly from the Script Preferences treeview (#1556, !860)
@@ -37,6 +38,7 @@ siril 1.4.0-beta2
 * Added utility.ONNXHelper class in python module to make it easier to ensure the correct onnxruntime module is installed. (!874)
 * Added ability to calibrate images for debayering only, without Dark, Flat, or Bias files (#1619)
 * Simplified the scripts and SPCC repository checking and made it more robust and thread-safe (!872)
+* Improved visibility of whether the autostretch preview is linked or unlinked (!878)
 
 siril 1.4.0-beta1
 04/26/25
